Fix layout shift
Fixes #16

--- a/website/style.css
+++ b/website/style.css
@@ -35,7 +35,7 @@ body {
 }
 
 /* We want to actually make the element disappear, not just invisible */
-.invisible.date_toggle {
+.invisible.disappear {
     display: none;
 }
 
